worked on the flex of some divs

--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <div></div>
-        <div>
+    <div id="header-area">
+        <div id="links-to-info">
             Operators &ensp; Weapons &ensp; Maps
+        </div>
+        <div id="main-text">
+            <h3>
+                This website will provide you information on operators, weapons, and maps
+            </h3>
+            <p>
+                Not all information will be provided on all operators, weapons, maps, but it is good to check out the info on the website.
+            </p>
         </div>
     </div>
     
