wrote some code for the header area and a link to image used

--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
         <div id="links-to-info">
             Operators &ensp; Weapons &ensp; Maps
         </div>
-        <div id="main-text">
-            <h3>
-                This website will provide you information on operators, weapons, and maps
-            </h3>
-            <p>
-                Not all information will be provided on all operators, weapons, maps, but it is good to check out the info on the website.
-            </p>
+        <div id="main-text-area">
+            <div id="website-descp">
+                <h3>
+                    This website will provide you information on operators, weapons, and maps
+                </h3>
+                <p>
+                    Not all information will be provided on all operators, weapons, maps, but it is good to check out the info on the website.
+                </p>
+            </div>
+            <div>
+                <img src="https://imageio.forbes.com/specials-images/imageserve/65da2da0e2e90f76b1fde68c/0x0.jpg?format=jpg&height=600&width=1200&fit=bounds" alt="Cover for Operator Deimos" height="100" width="150">
+            </div>
         </div>
+        
     </div>
     
 </body>
