--- a/index.html
+++ b/index.html
@@ -24,7 +24,21 @@
                 <img src="https://imageio.forbes.com/specials-images/imageserve/65da2da0e2e90f76b1fde68c/0x0.jpg?format=jpg&height=600&width=1200&fit=bounds" alt="Cover for Operator Deimos" height="100" width="150">
             </div>
         </div>
-        
+    </div>
+    <div id="some-info"> 
+        <h3>What is Rainbow Six Siege?</h3>
+        <div class="some-info-item">
+            <p>First trailer for Rainbow Six Siege</p>
+            <div class="some-info-item">
+                <p>First trailer for Rainbow Six Siege</p>
+            </div>
+            <div class="some-info-item">
+                <p>First trailer for Rainbow Six Siege</p>
+            </div>
+            <div class="some-info-item">
+                <p>First trailer for Rainbow Six Siege</p>
+            </div>
+        </div>
     </div>
     
 </body>
